# Helix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
api/config/: models.py
api/dataset/: __init__.py
api/evaluation/: __init__.py
api/evolution/: __init__.py
api/gateway/: factory.py
api/registry/: __init__.py  service.py
api/storage/: database.py  models.py
api/synthesis/: engine.py
api/web/: app.py  auth.py  event_bus.py  rate_limit.py  schemas.py
api/web/routers/: auth.py  datasets.py  evolution.py  format_guides.py  history.py  models.py  personas.py  playground.py  presets.py  prompts.py  settings.py  synthesis.py  wizard.py  ws.py
cli/: README.md  pyproject.toml
cli/helix_cli/: __init__.py  main.py
cli/helix_cli/commands/: accept.py  evolve.py  init.py  list.py  models.py  results.py  setup.py  show.py
cli/helix_cli/display/: progress.py  tables.py
cli/helix_cli/project/: discovery.py  loader.py  scaffold.py  writer.py
docs/: CONFIGURATION.md  SECURITY_AUDIT.md
frontend/: nginx.conf  openapi.json  package-lock.json
frontend/src/: App.tsx
tests/: conftest.py
tests/api/: conftest.py  test_history.py  test_history_results.py  test_models.py  test_prompt_versions.py  test_prompts.py  test_settings.py
tests/config/: test_models.py  test_prompt_config_extended.py
tests/e2e/: conftest.py  test_ivr_pipeline.py  test_ivr_pipeline_mock.py
tests/integration/: test_provider_integration.py  test_wizard_e2e.py
tests/storage/: test_db_seed.py
(+26 files in other folders)
